--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "^10.3.4",
+    "@types/twig": "^1.10.1",
     "nodemon": "^1.17.5",
     "ts-node": "^6.1.1",
     "tslint": "^5.10.0",
