--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "echo 'TODO: Make tests'",
     "build": "npm run build-ts && npm run tslint",
     "build-ts": "tsc",
-    "tslint": "tslint -c tslint.json -p tsconfig.json"
+    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "docs": "typedoc --options typedoc.json --out docs"
   },
   "devDependencies": {
     "@types/node": "^10.3.4",
@@ -19,6 +20,7 @@
     "nodemon": "^1.17.5",
     "ts-node": "^6.1.1",
     "tslint": "^5.10.0",
+    "typedoc": "^0.11.1",
     "typescript": "^2.9.2"
   },
   "dependencies": {
