--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "jekyll-generate-page",
   "version": "1.0.0",
   "description": "Generate a Jekyll page.",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": "git@github.com:theel0ja/jekyll-generate-page.git",
   "author": "Elias Ojala <elias@eliasojala.me>",
   "license": "MIT",
