--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "esModuleInterop": true,
     "outDir": "dist",
     "sourceMap": true,
-    "removeComments": true
+    "removeComments": true,
+    "declaration": true,
   },
   "include": [
     "src/**/*.ts"
